删除了部分调试语句；修改了readme；添加了：在系统托盘处可直接刷新数据库的功能

--- a/ui/icon.qrc
+++ b/ui/icon.qrc
@@ -4,5 +4,6 @@
         <file>icon/setting.svg</file>
         <file>icon/tips.svg</file>
         <file>icon/trayIcon.svg</file>
+        <file>icon/refresh.svg</file>
     </qresource>
 </RCC>
