--- a/ui/settingwindow.ui
+++ b/ui/settingwindow.ui
@@ -99,7 +99,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>140</y>
+       <y>170</y>
        <width>181</width>
        <height>28</height>
       </rect>
@@ -112,7 +112,7 @@
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>140</y>
+       <y>170</y>
        <width>181</width>
        <height>28</height>
       </rect>
@@ -125,7 +125,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>180</y>
+       <y>210</y>
        <width>311</width>
        <height>23</height>
       </rect>
@@ -138,7 +138,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>220</y>
+       <y>250</y>
        <width>81</width>
        <height>21</height>
       </rect>
@@ -157,7 +157,7 @@
      <property name="geometry">
       <rect>
        <x>110</x>
-       <y>220</y>
+       <y>250</y>
        <width>131</width>
        <height>19</height>
       </rect>
@@ -170,7 +170,7 @@
      <property name="geometry">
       <rect>
        <x>390</x>
-       <y>140</y>
+       <y>170</y>
        <width>161</width>
        <height>21</height>
       </rect>
@@ -183,7 +183,7 @@
      <property name="geometry">
       <rect>
        <x>390</x>
-       <y>170</y>
+       <y>200</y>
        <width>231</width>
        <height>41</height>
       </rect>
@@ -202,7 +202,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>250</y>
+       <y>280</y>
        <width>421</width>
        <height>25</height>
       </rect>
@@ -212,7 +212,7 @@
      <property name="geometry">
       <rect>
        <x>440</x>
-       <y>250</y>
+       <y>280</y>
        <width>171</width>
        <height>19</height>
       </rect>
@@ -225,7 +225,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>280</y>
+       <y>310</y>
        <width>421</width>
        <height>25</height>
       </rect>
@@ -235,13 +235,26 @@
      <property name="geometry">
       <rect>
        <x>440</x>
-       <y>280</y>
+       <y>310</y>
        <width>181</width>
        <height>19</height>
       </rect>
      </property>
      <property name="text">
       <string>自定义搜索无结果的文本</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="boxSearchUWP">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>541</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>搜索UWP应用</string>
      </property>
     </widget>
    </widget>
