优化了图标展示，适配了高缩放比

--- a/ui/resultitem.ui
+++ b/ui/resultitem.ui
@@ -73,6 +73,9 @@
         <property name="alignment">
          <set>Qt::AlignCenter</set>
         </property>
+        <property name="margin">
+         <number>0</number>
+        </property>
        </widget>
       </item>
       <item>
