添加了程序启动次数统计的功能

--- a/ui/icon.qrc
+++ b/ui/icon.qrc
@@ -6,5 +6,6 @@
         <file>icon/trayIcon.svg</file>
         <file>icon/refresh.svg</file>
         <file>icon/help.svg</file>
+        <file>icon/openFolder.svg</file>
     </qresource>
 </RCC>
