--- a/ui/resultitem.ui
+++ b/ui/resultitem.ui
@@ -34,7 +34,7 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
+     <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,0,1">
       <property name="leftMargin">
        <number>0</number>
       </property>
