--- a/ui/settingwindow.ui
+++ b/ui/settingwindow.ui
@@ -144,6 +144,13 @@
         </layout>
        </item>
        <item>
+        <widget class="QCheckBox" name="boxEnableStatistics">
+         <property name="text">
+          <string>启用程序打开次数统计（将会用于搜索算法中）</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_2">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
